--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>B.Nagendra</groupId>
-  <artifactId>B.Bhavana</artifactId>
+  <artifactId>Bhavana</artifactId>
   <version>11</version>
 
   <name>calculator_addition</name>
